# fh-challenge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  buildspec.yml  docker-compose.sonar.yml  docker-compose.yml  pyproject.toml  skills-lock.json  sonar-project.properties
.claude/: settings.json
.claude/hooks/: ruff_validator.py
.cursor/: mcp.json
.cursor/plans/: langgraph_stack_migration_79468f64.plan.md
.cursor/rules/: layer-boundaries.mdc  (+1 more)
app/: asyncio_compat.py  config.py  worker.py
docker/: elasticmq.conf
docs/: ARCHITECTURE.md  BACKLOG.md  DEPLOYMENT.md  SONARQUBE.md
evals/: .env.example  EVAL_REPORT.md  README.md  assertions.py  config.yaml  env_config.py  reset.py  run_evals.py
infra/: .terraform.lock.hcl  README.md  app-secrets.json.example  aws_cicd.tf  aws_ecr.tf  aws_ecs.tf  aws_ecs_services.tf  aws_github_oidc.tf  aws_rds.tf  aws_secrets.tf  aws_sqs.tf  main.tf  outputs.tf  temporal.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
reports/: sonar-issues.json
scripts/: sonar-integration-test.ps1  sonar-integration-test.sh  sonar-scan.ps1  sonar-scan.sh
tests/: _llm_stub.py  conftest.py  test_agent_llm.py  test_agent_unit.py  test_api_routes.py  test_asyncio_compat.py  test_auth.py  test_consumer.py  test_customers.py  test_graph.py  test_graph_extra.py  test_health.py  test_llm.py  test_load_data.py  test_merge.py  test_nodes.py  test_observability.py  test_publisher.py  test_queue_messages.py  test_router.py  test_sops.py  test_tool_extraction.py  test_tools.py
(+58 files in other folders)
