[project]
name = "freighthero-watchtower"
version = "0.1.0"
description = "FreightHero AI Watchtower — take-home implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langfuse>=4.6.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "temporalio>=1.27.2",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
