[project]
name = "freighthero-watchtower"
version = "0.1.0"
description = "FreightHero AI Watchtower — take-home implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-core>=0.3.0",
    "langchain-openrouter>=0.1.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "langsmith>=0.3.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.47.0",
    "langchain>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
